fixed spelling errors

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
 
         <div class="grid-container">
             <div class="grid-item" onclick="redirectToPage('projects/pychess.html')">
-                <img src="images/chess.png">
+                <img src="images/Chess.png">
                 <div class="item-title"><h3>Chess</h3></div>
             </div>
             <div class="grid-item" onclick="redirectToPage('projects/pyspikes.html')">
@@ -80,7 +80,7 @@
                 <div class="item-title"><h3>To-Do List</h3></div>
             </div>
             <div class="grid-item">
-                <img src="images/chess.png">
+                <img src="images/Chess.png">
                 <div class="item-title"><h3>Chess</h3></div>
             </div>
             <div class="grid-item">
