--- a/skills.html
+++ b/skills.html
@@ -43,7 +43,7 @@
                 <h3>C#</h3>
             </div>
             <div class="skill">
-                <img src="images/R.png">
+                <img src="images/r.png">
                 <h3>R</h3>
             </div>
             <div class="skill">
