fixed library links

--- a/projects/pydino.html
+++ b/projects/pydino.html
@@ -61,15 +61,11 @@
             <h2>Key Takeaways</h2>
         </div>
 
+        <script src="project-script.js"></script>
         <script>
             function redirectToPage(url) {
                 window.location.href = url;
             }
-
-            const librariesContiainer = document.querySelector(".libraries-container");
-            const librarycount = librariesContiainer.querySelectorAll(".library").length;
-            librariesContiainer.style.columnCount = librarycount;
-            librariesContiainer.style.columnGap = '50px';
         </script>
     </body>
 </html>
