--- a/projects/pyspikes.html
+++ b/projects/pyspikes.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../styles.css">
         <link rel="stylesheet" href="project-styles.css">
         <link rel="stylesheet" href="../code.css">
+        
     </head>
     <body>
         <div class="header">
@@ -184,6 +185,10 @@
         <img src="../images/copy.png" id="copy-overlay">
 
         <script src="project-script.js"></script>
-
+        <script>
+            function redirectToPage(url) {
+                window.location.href = url;
+            }
+        </script>
     </body>
 </html>
