minor visual changes

--- a/projects.html
+++ b/projects.html
@@ -102,13 +102,15 @@
         </div>
 
         <div class="section-title">
-            <h2>C++</h2> <br>
-            <img src="images/c++.png">
+            <h2>HTML</h2> <br>
+            <img src="images/html-5.png">
         </div>
 
-        <div class="section-title">
-            <h2>C#</h2> <br>
-            <img src="images/c-sharp.png">
+        <div class="grid-container">
+            <div class="grid-item" onclick="redirectToPage('#')">
+                <img src="images/text-to-html.png">
+                <div class="item-title"><h3>Text To HTML</h3></div>
+            </div>
         </div>
 
         <script>
