added text-to-html project + minor visual changes

--- a/skills.html
+++ b/skills.html
@@ -78,6 +78,10 @@
                 <h3>Web Servers</h3>
             </div>
             <div class="skill">
+                <img src="images/vm.png">
+                <h3>Virtual Machines</h3>
+            </div>
+            <div class="skill">
                 <img src="images/json.png">
                 <h3>JSON</h3>
             </div>
