--- a/projects/text-to-html/editor.html
+++ b/projects/text-to-html/editor.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1 id="title">Text to HTML Converter</h1>
         <div id="editor-section">
             <h1 class="section-title">Text Editor</h1>
             <div id="option-bar">
