--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,8 @@
             <img src="images/python.png">
         </div>
 
+        <br>
+
         <div class="grid-container">
             <div class="grid-item" onclick="redirectToPage('projects/pychess.html')">
                 <img src="images/Chess.png">
@@ -69,10 +71,14 @@
             </div>
         </div>
 
+        <br>
+
         <div class="section-title">
             <h2>Java</h2> <br>
             <img src="images/java.png">
         </div>
+
+        <br>
 
         <div class="grid-container">
             <div class="grid-item">
@@ -89,10 +95,14 @@
             </div>
         </div>
 
+        <br>
+
         <div class="section-title">
             <h2>R</h2> <br>
             <img src="images/r.png">
         </div>
+
+        <br>
 
         <div class="grid-container">
             <div class="grid-item" onclick="redirectToPage('projects/rrat.html')">
@@ -101,17 +111,27 @@
             </div>
         </div>
 
+        <br>
+
         <div class="section-title">
             <h2>HTML</h2> <br>
             <img src="images/html-5.png">
         </div>
 
+        <br>
+
         <div class="grid-container">
+            <div class="grid-item" onclick="redirectToPage('index.html')">
+                <img src="images/website.png">
+                <div class="item-title"><h3>Personal Website</h3></div>
+            </div>
             <div class="grid-item" onclick="redirectToPage('projects/text-to-html/editor.html')">
                 <img src="images/text-to-html.png">
                 <div class="item-title"><h3>Text To HTML</h3></div>
             </div>
         </div>
+
+        <br>
 
         <script>
             function redirectToPage(url) {
@@ -121,7 +141,7 @@
             const containers = document.querySelectorAll('.grid-container');
             containers.forEach(container => {
                 const num_divs = container.querySelectorAll('.grid-item').length;
-                const col = 3;
+                const col = 4;
                 const row = Math.ceil(num_divs / col);
                 container.style.gridTemplateColumns = 'repeat(' + col + ', 1fr)';
                 container.style.gridTemplateRows = 'repeat(' + row + ', 300px)';  
