changed main font

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
         <div class="row">
             <div class="side">
-                <h1>About Me</h1>
+                <h2>About Me</h2>
                 <img id="my-photo" src="images/myphoto.png">
-                <h1>Education</h1>
+                <h2>Education</h2>
                 <span class="university-container">
                     <h3>University of Wisconsin - Madison</h3>
                     <img src="images/uw-logo.png">
@@ -43,16 +43,16 @@
                 </div>
             </div>
             <div class="main">
-                <h1>Awards / Certifications</h1>
+                <h2>Awards / Certifications</h2>
                 <br>
-                <h1>Interests / Hobbies</h1>
+                <h2>Interests / Hobbies</h2>
                 <h3>Cross Country and Track & Field</h3>
                 <p>Varsity member of the Cross Country and Track & Field teams at Saint Francis High School</p>
                 <ul>
-                    <li>800 meters: 2:01</li>
-                    <li>1600 meters: 4:24</li>
-                    <li>3200 meters: 9:47</li>
-                    <li>5000 meters: 15:31</li>
+                    <li>800 meters: <span style="font-family: Monaco">2:01</span></li>
+                    <li>1600 meters: <span style="font-family: Monaco">4:24</span></li>
+                    <li>3200 meters: <span style="font-family: Monaco">9:47</span></li>
+                    <li>5000 meters: <span style="font-family: Monaco">15:31</span></li>
                 </ul>
                 <h3>Marathon Runner</h3>
                 <ul>
