--- a/projects/pyspikes.html
+++ b/projects/pyspikes.html
@@ -73,7 +73,7 @@
             <br>
             <div class="code-container">
                 <div class="code-chunk" id="config.txt">
-                    <img src="../images/copy.png" onclick="copyToClipboard('config.txt')">
+                    <div class="copy"><img src="../images/copy.png" onclick="copyToClipboard('config.txt')"></div>
                     <p>[NEAT]</p> 
                     <p>fitness_criterion &nbsp; &nbsp; = mean</p>
                     <p>fitness_threshold &nbsp; &nbsp; = 750</p>
@@ -181,8 +181,6 @@
         <div class="section-title">
             <h2>Analysis</h2>
         </div>
-        
-        <img src="../images/copy.png" id="copy-overlay">
 
         <script src="project-script.js"></script>
         <script>
