minor visual changes + added  page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="navbar">
             <a href="index.html">About</a>
             <a href="skills.html">Skills</a>
+            <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html" class="right">Contact</a>
         </div>
@@ -56,10 +57,11 @@
                 </ul>
                 <h3>Marathon Runner</h3>
                 <ul>
-                    <li>San Francisco Marathon (2022): 8th place</li>
-                    <li>Madison Marathons (2022): 21st place</li>
+                    <li>San Francisco Marathon (2022): <span style="font-family: Monaco">21st place</span></li>
+                    <li>Madison Marathons (2022): <span style="font-family: Monaco">8th place</span></li>
                     <li>Boston Marathon Qualifier (2023)</li>
                 </ul>
+                <br>
                 <div class="image-slider">
                     <img src="images/run2.png">
                     <img src="images/run1.png">
