--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
         <div class="navbar">
             <a href="index.html">About</a>
             <a href="skills.html">Skills</a>
+            <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html" class="right">Contact</a>
         </div>
@@ -25,9 +26,7 @@
             <h2>Python</h2> <br>
             <img src="images/python.png">
         </div>
-
         <br>
-
         <div class="grid-container">
             <div class="grid-item" onclick="redirectToPage('projects/pychess.html')">
                 <img src="images/Chess.png">
@@ -70,16 +69,12 @@
                 <div class="item-title"><h3>Tetris</h3></div>
             </div>
         </div>
-
         <br>
-
         <div class="section-title">
             <h2>Java</h2> <br>
             <img src="images/java.png">
         </div>
-
         <br>
-
         <div class="grid-container">
             <div class="grid-item">
                 <img src="images/tasks.png">
@@ -94,32 +89,24 @@
                 <div class="item-title"><h3>Route Planner</h3></div>
             </div>
         </div>
-
         <br>
-
         <div class="section-title">
             <h2>R</h2> <br>
             <img src="images/r.png">
         </div>
-
         <br>
-
         <div class="grid-container">
             <div class="grid-item" onclick="redirectToPage('projects/rrat.html')">
                 <img src="images/rat.png">
                 <div class="item-title"><h3>Rat Population</h3></div>
             </div>
         </div>
-
         <br>
-
         <div class="section-title">
             <h2>HTML</h2> <br>
             <img src="images/html-5.png">
         </div>
-
         <br>
-
         <div class="grid-container">
             <div class="grid-item" onclick="redirectToPage('index.html')">
                 <img src="images/website.png">
@@ -130,7 +117,11 @@
                 <div class="item-title"><h3>Text To HTML</h3></div>
             </div>
         </div>
-
+        <br>
+        <div class="section-title">
+            <h2>C++</h2> <br>
+            <img src="images/c++.png">
+        </div>
         <br>
 
         <script>
