--- a/projects/pyspikes.html
+++ b/projects/pyspikes.html
@@ -19,6 +19,7 @@
         <div class="navbar">
             <a href="../index.html">About</a>
             <a href="../skills.html">Skills</a>
+            <a href="../experience.html">Experience</a>
             <a href="../projects.html">Projects</a>
             <a href="../contact.html" class="right">Contact</a>
         </div>
@@ -180,6 +181,10 @@
 
         <div class="section-title">
             <h2>Analysis</h2>
+        </div>
+        
+        <div class="section-container">
+            
         </div>
 
         <script src="project-script.js"></script>
