minor visual changes + added Experience tab

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </ul>
                 <br>
                 <div class="image-slider">
-                    <img src="images/run2.png">
+                    <img src="images/run2.png" class="active">
                     <img src="images/run1.png">
                     <img src="images/run3.png">
                     <div class="arrow arrow-left"><</div>
