--- a/projects.html
+++ b/projects.html
@@ -48,11 +48,11 @@
                 <img src="images/bubble.png">
                 <div class="item-title"><h3>Bubble Trouble</h3></div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item" onclick="redirectToPage('projects/pyminesweeper.html')">
                 <img src="images/minesweeper.png">
                 <div class="item-title"><h3>Mine Sweeper</h3></div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item" onclick="redirectToPage('projects/pyflow.html')">
                 <img src="images/flow.png">
                 <div class="item-title"><h3>Flow</h3></div>
             </div>
@@ -60,11 +60,11 @@
                 <img src="images/2048.png">
                 <div class="item-title"><h3>2048</h3></div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item" onclick="redirectToPage('projects/pysnake.html')">
                 <img src="images/snake.png">
                 <div class="item-title"><h3>Snake</h3></div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item" onclick="redirectToPage('projects/pytetris.html')">
                 <img src="images/tetris.png">
                 <div class="item-title"><h3>Tetris</h3></div>
             </div>
