--- a/projects/py2048.html
+++ b/projects/py2048.html
@@ -54,8 +54,13 @@
         </div>
 
         <div class="video-container">
-            <video src="../videos/2048-512(1).mov" controls muted autoplay loop></video> <br>
+            <video src="../videos/2048-512.mov" controls muted autoplay loop></video> <br>
             <h4>Failed attempt (Max: 512)</h4>
+        </div>
+
+        <div class="video-container">
+            <video src="../videos/2048-1024.mov" controls muted autoplay loop></video> <br>
+            <h4>Failed attempt (Max: 1024)</h4>
         </div>
 
         <div class="section-title">
