--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="side">
                 <h2>About Me</h2>
                 <img id="my-photo" src="images/myphoto.png">
+                <br>
                 <h2>Education</h2>
                 <span class="university-container">
                     <h3>University of Wisconsin - Madison</h3>
@@ -44,30 +45,44 @@
                 </div>
             </div>
             <div class="main">
-                <h2>Awards / Certifications</h2>
+                <div class="section">
+                    <h2>Certifications</h2>
+                </div>
                 <br>
-                <h2>Interests / Hobbies</h2>
-                <h3>Cross Country and Track & Field</h3>
-                <p>Varsity member of the Cross Country and Track & Field teams at Saint Francis High School</p>
-                <ul>
-                    <li>800 meters: <span style="font-family: Monaco">2:01</span></li>
-                    <li>1600 meters: <span style="font-family: Monaco">4:24</span></li>
-                    <li>3200 meters: <span style="font-family: Monaco">9:47</span></li>
-                    <li>5000 meters: <span style="font-family: Monaco">15:31</span></li>
-                </ul>
-                <h3>Marathon Runner</h3>
-                <ul>
-                    <li>San Francisco Marathon (2022): <span style="font-family: Monaco">21st place</span></li>
-                    <li>Madison Marathons (2022): <span style="font-family: Monaco">8th place</span></li>
-                    <li>Boston Marathon Qualifier (2023)</li>
-                </ul>
-                <br>
-                <div class="image-slider">
-                    <img src="images/run2.png" class="active">
-                    <img src="images/run1.png">
-                    <img src="images/run3.png">
-                    <div class="arrow arrow-left"><</div>
-                    <div class="arrow arrow-right">></div>
+                <div class="section">
+                    <h2>Hobbies</h2>
+                    <div class="sub-section">
+                        <h3 style="text-align: center;">Cross Country and Track & Field</h3>
+                        <div class="xc-event">
+                            <h4>800m</h4>
+                            <h2>2:01</h2>
+                        </div>
+                        <div class="xc-event">
+                            <h4>1600m</h4>
+                            <h2>4:24</h2>
+                        </div>
+                        <div class="xc-event">
+                            <h4>3200m</h4>
+                            <h2>9:47</h2>
+                        </div>
+                        <div class="xc-event">
+                            <h4>5000m</h4>
+                            <h2>15:31</h2>
+                        </div>
+                    </div>
+                    <div class="sub-section">
+                        <h3 style="text-align: center;">Marathon Runner</h3>
+                        <img class="marathon-img" src="images/sfmarathon.png">
+                        <img class="marathon-img" src="images/madisonmarathon.png">
+                        <img class="marathon-img" src="images/bostonmarathon.png">
+                        <div class="image-slider">
+                            <img src="images/run2.png" class="active">
+                            <img src="images/run1.png">
+                            <img src="images/run3.png">
+                            <div class="arrow arrow-left"><</div>
+                            <div class="arrow arrow-right">></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
