added temporary window and other minor changes

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         </div>
         <br>
         <div class="grid-container">
-            <div class="grid-item" onclick="redirectToPage('projects/pychess.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/Chess.png">
                 <div class="item-title"><h3>Chess</h3></div>
             </div>
@@ -36,35 +36,35 @@
                 <img src="images/spikes.png">
                 <div class="item-title"><h3>Spikes</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/pydino.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/dino.png">
                 <div class="item-title"><h3>Dino</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/pyflappy.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/flappy.png">
                 <div class="item-title"><h3>Flappy Bird</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/pybubble.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/bubble.png">
                 <div class="item-title"><h3>Bubble Trouble</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/pyminesweeper.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/minesweeper.png">
                 <div class="item-title"><h3>Mine Sweeper</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/pyflow.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/flow.png">
                 <div class="item-title"><h3>Flow</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/py2048.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/2048.png">
                 <div class="item-title"><h3>2048</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/pysnake.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/snake.png">
                 <div class="item-title"><h3>Snake</h3></div>
             </div>
-            <div class="grid-item" onclick="redirectToPage('projects/pytetris.html')">
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
                 <img src="images/tetris.png">
                 <div class="item-title"><h3>Tetris</h3></div>
             </div>
@@ -116,11 +116,6 @@
                 <img src="images/text-to-html.png">
                 <div class="item-title"><h3>Text To HTML</h3></div>
             </div>
-        </div>
-        <br>
-        <div class="section-title">
-            <h2>C++</h2> <br>
-            <img src="images/c++.png">
         </div>
         <br>
 
