--- a/projects/pyspikes.html
+++ b/projects/pyspikes.html
@@ -194,11 +194,20 @@
                     </div>
                     <h3>[config.txt]</h3> 
                 </div>
+                <p>For the algorithm to work and the AI to get better, each member of the population has to be scored in some way that determines which ones are better. 
+                    The way this is done is by assigning points to each bird according to the following criteria: 
+                </p>
+                
             </div>
         </div>
 
         <div class="section-title">
             <h2>Screenshots and Videos</h2>
+        </div>
+
+        <div class="video-container">
+            <video src="../videos/spikes-train.mov" controls muted autoplay loop></video> <br>
+            <h4>AI model training</h4>
         </div>
 
         <div class="video-container">
