--- a/skills.html
+++ b/skills.html
@@ -71,6 +71,14 @@
                 <h3>Git</h3>
             </div>
             <div class="skill">
+                <img src="images/junit5.png">
+                <h3>Unit Testing</h3>
+            </div>
+            <div class="skill">
+                <img src="images/AndroidStudioIcon.png">
+                <h3>Android Studio</h3>
+            </div>
+            <div class="skill">
                 <img src="images/linux.png">
                 <h3>Linux</h3>
             </div>
@@ -85,10 +93,6 @@
             <div class="skill">
                 <img src="images/json.png">
                 <h3>JSON</h3>
-            </div>
-            <div class="skill">
-                <img src="images/junit5.png">
-                <h3>JUnit5 Testing</h3>
             </div>
             <div class="skill">
                 <img src="images/eclipse.png">
