--- a/experience.html
+++ b/experience.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Jaime Zepeda Pina">
 
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="projects.css">
+        <link rel="stylesheet" href="experience.css">
     </head>
     <body>
         <div class="header">
@@ -21,5 +21,18 @@
             <a href="projects.html">Projects</a>
             <a href="contact.html" class="right">Contact</a>
         </div>
+
+        <div class="section-title">
+            <h2>Relevant Experience</h2>
+        </div>
+        <br>
+        <div class="section-title">
+            <h2>Other Work Experience</h2>
+        </div>
+        <br>
+        <div class="item-container">
+            
+        </div>
+
     </body>
 </html>
