added featured section in projects tab

--- a/index.html
+++ b/index.html
@@ -69,9 +69,15 @@
                     </div>
                     <div class="sub-section">
                         <h3 style="text-align: center;">Marathon Runner</h3>
-                        <img class="marathon-img" src="images/sfmarathon.png">
-                        <img class="marathon-img" src="images/madisonmarathon.png">
-                        <img class="marathon-img" src="images/bostonmarathon.png">
+                        <div class="marathon">
+                            <img src="images/sfmarathon.png">
+                        </div>
+                        <div class="marathon">
+                            <img src="images/madisonmarathon.png">
+                        </div>
+                        <div class="marathon">
+                            <img src="images/bostonmarathon.png">
+                        </div>
                         <div class="image-slider">
                             <img src="images/run2.png" class="active">
                             <img src="images/run1.png">
