--- a/skills.html
+++ b/skills.html
@@ -27,35 +27,35 @@
         </div>
 
         <div class="skills-container">
-            <div class="skill">
+            <div class="skill flip" experience="Advanced">
                 <img src="images/java.png">
                 <h3>Java</h3>
             </div>
-            <div class="skill">
+            <div class="skill flip">
                 <img src="images/python.png">
                 <h3>Python</h3>
             </div>
-            <div class="skill">
+            <div class="skill flip">
                 <img src="images/c++.png">
                 <h3>C++</h3>
             </div>
-            <div class="skill">
+            <div class="skill flip">
                 <img src="images/c-sharp.png">
                 <h3>C#</h3>
             </div>
-            <div class="skill">
+            <div class="skill flip">
                 <img src="images/r.png">
                 <h3>R</h3>
             </div>
-            <div class="skill">
+            <div class="skill flip">
                 <img src="images/html-5.png">
                 <h3>HTML</h3>
             </div>
-            <div class="skill">
+            <div class="skill flip">
                 <img src="images/java-script.png">
                 <h3>Javascript</h3>
             </div>
-            <div class="skill">
+            <div class="skill flip">
                 <img src="images/css-3.png">
                 <h3>CSS</h3>
             </div>
@@ -89,10 +89,6 @@
             <div class="skill">
                 <img src="images/vm.png">
                 <h3>Virtual Machines</h3>
-            </div>
-            <div class="skill">
-                <img src="images/json.png">
-                <h3>JSON</h3>
             </div>
             <div class="skill">
                 <img src="images/eclipse.png">
