--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,29 @@
         </div>
 
         <div class="section-title">
+            <h2>Featured</h2> <br>
+            <img src="images/featured.png">
+        </div>
+        <br>
+        <div class="grid-container">
+            <div class="grid-item" onclick="redirectToPage('projects/pyspikes.html')">
+                <img src="images/spikes.png">
+                <div class="item-title"><h3>Spikes</h3></div>
+                <div class="item-widget"><img src="images/python.png"></div>
+            </div>
+            <div class="grid-item">
+                <img src="images/Chess.png">
+                <div class="item-title"><h3>Chess</h3></div>
+                <div class="item-widget"><img src="images/java.png"></div>
+            </div>
+            <div class="grid-item" onclick="redirectToPage('projects/temp.html')">
+                <img src="images/snake.png">
+                <div class="item-title"><h3>Snake</h3></div>
+                <div class="item-widget"><img src="images/python.png"></div>
+            </div>
+        </div>
+        <br>
+        <div class="section-title">
             <h2>Python</h2> <br>
             <img src="images/python.png">
         </div>
@@ -83,10 +106,6 @@
             <div class="grid-item">
                 <img src="images/Chess.png">
                 <div class="item-title"><h3>Chess</h3></div>
-            </div>
-            <div class="grid-item">
-                <img src="images/route.png">
-                <div class="item-title"><h3>Route Planner</h3></div>
             </div>
         </div>
         <br>
